# hsc-figures

./: .gitignore  README.md  clones.ipynb  matplotlibrc  pyproject.toml
abm/: clones.ipynb  dynamics.ipynb  model.ipynb  parameters.ipynb  sde.ipynb  simulations.ipynb  simulations.sh
abm/predictions_1_over_f/: homeostasisSFS_pid3.csv  homeostasisSFS_pid4.csv  homeostasisSFS_pid5.csv  homeostasisSFS_pid6.csv  homeostasisSFS_pid7.csv  homeostasisSFS_pid8.csv  homeostasisSFS_pid9.csv
inferences/: README.md
inferences/.ipynb_checkpoints/: posteriors-checkpoint.ipynb
inferences/abc/: README.md  abcAcceptedParamsQuantile_5D_normedFitness_biasedSampling_3000particles_ranked.csv  particles.sh  posteriors.ipynb  priors.ipynb
inferences/doublehits/: clustering.ipynb  matplotlibrc  variantTrajectoryEstimates.csv
targetseq/: 10000genome.ipynb  chapman2021.ipynb  fabre2022.ipynb  kar2022.ipynb  mitchell2022.ipynb  robertson2022.ipynb
