[project]
name = "hsc-figures"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "hscpy",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
hscpy = { git = "https://github.com/fraterenz/hscpy", rev = "v0.4.11" }
